<resources>
    <string name="app_name">JamPlay</string>
    <string name="playlist_add_title">플레이리스트에 추가</string>
    <string name="back">뒤로가기</string>
    <string name="complete">완료</string>
    <string name="delete">삭제</string>
    <string name="add">추가</string>
    <string name="rename">이름 변경</string>
    <string name="playlist_rename">플레이리스트 이름 변경</string>
    <string name="track_delete">트랙 삭제</string>
    <string name="no_playlists">아직 플레이리스트가 없습니다.</string>
    <string name="select_playlist">플레이리스트를 선택하세요.</string>
    <string name="create_new_playlist">+ 새 플레이리스트 만들기</string>
    <string name="new_playlist_dialog_title">새 플레이리스트 생성</string>
    <string name="playlist_name_label">플레이리스트 이름</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="playlist_title">플레이리스트</string>
    <string name="playlist_track_count">%1$d곡</string>
    <string name="playlist_not_found">플레이리스트를 찾을 수 없습니다.</string>
    <string name="no_tracks_in_playlist">플레이리스트에 곡이 없습니다.</string>
    <string name="search_title">검색</string>
    <string name="favorites_playlist_name">❤</string>
    <string name="playlist_name_exists">이미 존재하는 이름입니다.</string>
    <string name="playlist_name_same_as_before">이전 이름과 동일합니다.</string>
    <string name="playlist_name_empty">이름을 입력해주세요.</string>
    <string name="channel_name_music_playback">음악 재생</string>
    <string name="channel_desc_music_playback">백그라운드에서 음악을 재생합니다.</string>
    <string name="no_search_results">검색 결과가 없습니다.</string>
    <string name="play">재생</string>
    <string name="pause">일시정지</string>
    <string name="search_load_error">곡을 불러오지 못했습니다.</string>
    <string name="previous_track">이전 곡</string>
    <string name="next_track">다음 곡</string>
    <string name="shuffle_on">셔플 켜짐</string>
    <string name="shuffle_off">셔플 꺼짐</string>
    <string name="repeat_off">반복 꺼짐</string>
    <string name="repeat_all">전체 반복</string>
    <string name="repeat_one">한 곡 반복</string>
    <string name="favorite_add">즐겨찾기 추가</string>
    <string name="favorite_remove">즐겨찾기 해제</string>
    <string name="playback_position">재생 위치</string>
    <string name="no_current_track">재생할 곡을 선택해주세요.</string>
</resources>
